@@ -1045,6 +1045,9 @@ Release 0.23.0 - Unreleased
     HDFS-2422. The NN should tolerate the same number of low-resource volumes
                as failed volumes (atm)
 
+    HDFS-2467. HftpFileSystem uses incorrect compare for finding delegation
+    tokens. (omalley)
+
   BREAKDOWN OF HDFS-1073 SUBTASKS
 
     HDFS-1521. Persist transaction ID on disk between NN restarts.
